...

    <ImageView
        android:id="@+id/tcm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/abm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/esm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/udm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/odm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/cdm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/reverse_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...
    <!-- cruise control -->
    <ImageView
        android:id="@+id/cruiseControl_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/engineStartStop_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/parkingBrake_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/handbrake_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/suspension_front_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...

    <ImageView
        android:id="@+id/suspension_rear_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...

    <ImageView
        android:id="@+id/differential_slippery_limiter_front_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...

    <ImageView
        android:id="@+id/differential_slippery_limiter_rear_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...

    <ImageView
        android:id="@+id/handling_assistance_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...
